Paginations and posts!

--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,8 @@ sass:
 show_social_icons: false 
 github_username: someGithubUser
 twitter_username: someTwitterUser
+
+# plugins
+plugins: [jekyll-paginate]
+paginate: 3
+
