changed the baseurl in support of a live-demo on the neme-s.org site. May switch this to happen at deploy time.

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@ author:
 description: "New England Model Engineering Society"
 url:
 
+# Make a preview of the new site available from /new-site/
+baseurl: "/new-site/"
+
 # Build settings
 permalink: :title/
 sass:
@@ -17,5 +20,5 @@ twitter_username: someTwitterUser
 
 # plugins
 plugins: [jekyll-paginate]
-paginate: 3
+paginate: 7
 
